# pi-resource-monitor

./: .gitignore  README.md
api/: package-lock.json  package.json
api/GetPiStats/: index.js
api/PostPiStats/: index.js
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.js  Routes.jsx
frontend/src/compontents/: PiContainer.js  PiData.js
frontend/src/pages/: Home.jsx
src/: runner.c
stats-collector/: Cargo.toml
stats-collector/src/: main.rs
stats-collector/utils/: cpu_runner.sh  ram_runner.sh  temp_runner.sh  temperature_runner.sh
