[package]
name = "stats-collector"
version = "0.1.0"
authors = ["Ben Durston <bengdurston@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
reqwest = { version="0.11.2", features=["json", "blocking"] }

